--- a/Scrapping/Scrapping.ipynb
+++ b/Scrapping/Scrapping.ipynb
@@ -836,231 +836,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Error sending stats to Plausible: error sending request for url (https://plausible.io/api/event)\n"
-          ]
-        },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Procesando (1/1): https://web.archive.org/web/20200609163417mp_/https://www.elespectador.com/opinion/educacion-pandemia-mas-inequidad/\n",
-            "Contenido incompleto, usando Selenium...\n",
-            "Falló método rápido, intentando con Selenium: Contenido requiere JavaScript\n",
-            "Error con Selenium en https://web.archive.org/web/20200609163417mp_/https://www.elespectador.com/opinion/educacion-pandemia-mas-inequidad/: module 'selenium.webdriver.support.expected_conditions' has no attribute 'or_'\n",
+            "“Durante 20 días en Barcelona no hubo uno solo en el que, antes de abandonar el hotel, no me comiera al menos una pepa (...) Con frecuencia la explosión era tan fuerte que me tumbaba en el suelo y me dormía justo allí, donde me alcanzara el efecto. En ese momento no había dolor, todo fluía y yo era tan feliz como un niño en una piscina”. Alonso Sánchez Baute nos acaba de entregar, con su Parábola del salmón, un verdadero tsunami de emociones que nos arrastran página a página, línea tras línea, tocando fibras hondas y escondidas del alma, sacudiendo tripas y obligándonos a viajar con él al interior de nosotros mismos.\n",
             "\n",
-            "Proceso completado. Resultados guardados en resultados_articulos.xlsx\n"
+            "Termino de leerlo y salgo a la superficie impactada. Lo llamo a felicitarlo y a decirle chapeau, pero es más profundo lo que siento. Le pregunto si es totalmente autobiográfico y me contesta que “si un libro tiene algún episodio de ficción, es ficción”. Pero, así no sean propios, todos los sucesos que nos comparte el narrador son historias auténticas. Y esa es la fuerza desgarradora de este libro. Fuerte y sin contemplaciones. Su periplo por Barcelona, Río de Janeiro, São Paulo y Buenos Aires es el recorrido de su alma, sus búsquedas, sus experiencias.\n",
+            "\n",
+            "Como el salmón. Ese pez misterioso que lucha contra las fuertes corrientes del río con una determinación y un conocimiento interno de que no permitirá que ningún obstáculo le impida su viaje hacia el origen. Ese pez que sabe bailar con sus miedos y seguir adelante a pesar de haber vivido dolores y experiencias extremas “sin soberbia en los ojos, solo sabiduría y piel gruesa”. Ese pez, monarca del río, capaz de recorrer más de 4.000 kilómetros hasta encontrar su origen en un recorrido vital lleno de enigmas y fantasía.\n",
+            "\n",
+            "Libro visceral. Sánchez Baute lo reconoce en una de sus páginas. Después de leer a Hervé Guibert, “se afianzó en mí la idea de que la escritura es un asunto de vísceras y de que, con tal de que sienta lo que lee, al lector hay que despedazarle al tiempo la cabeza y el corazón”. En otro aparte dice: “Escribir no fue una decisión. Ni siquiera lo pensé. Lo hice por necesidad de encontrar mi propia voz en un entorno que negaba la mía. En un pueblo misógino, un marica no era más que un mudo. De modo que desde muy joven enfrenté la disyuntiva de escribir o escribir. No había otra opción, escribía historias cargadas de terror porque era lo que sentía en ese momento: terror ante la vida, terror a que cualquiera supiera que habitaba en mí un monstruo que luchaba cada vez con más fuerzas para hacer añicos los barrotes”.\n",
+            "\n",
+            "Barcelona y su lujuria, el encuentro con “ese muchachito adolorido a la vera del camino, con ese dolor de agua estancada”. Río de Janeiro y esa espantosa sensación de soledad en la playa, recibiendo el Año Nuevo: “En ese momento, cuando el reloj marcó en punto las 12 de la noche y todos a mi alrededor corrieron a abrazarse y besarse, yo era menos que nada”. São Paulo, esa selva de cemento donde conoció la ternura: “Eso pasó cuando estaba con Thiago: aprendí que una sola persona en la que se pueda confiar nos libera”. Buenos Aires, “con ese calor de brea ardiente”, donde poco a poco se familiarizó con su noche, “donde la melancolía se asoma como protagonista”.\n",
+            "\n",
+            "Parábola del salmón, un libro sin máscaras, un recorrer contra la corriente, llegar al origen, cicatrizar heridas, sentir ese dolor sanador y pisar el infierno del sufrimiento para poder remontar. No tengo más remedio que decirle, de nuevo, chapeau.\n"
           ]
         }
       ],
       "source": [
         "import requests\n",
         "from bs4 import BeautifulSoup\n",
-        "import pandas as pd\n",
-        "from datetime import datetime\n",
-        "from selenium import webdriver\n",
-        "from selenium.webdriver.chrome.options import Options\n",
-        "from selenium.webdriver.common.by import By\n",
-        "from selenium.webdriver.support.ui import WebDriverWait\n",
-        "from selenium.webdriver.support import expected_conditions as EC\n",
-        "import time\n",
         "import re\n",
-        "\n",
-        "def setup_driver():\n",
-        "    \"\"\"Configura el driver de Chrome optimizado\"\"\"\n",
-        "    chrome_options = Options()\n",
-        "    chrome_options.add_argument(\"--headless\")\n",
-        "    chrome_options.add_argument(\"--disable-gpu\")\n",
-        "    chrome_options.add_argument(\"--no-sandbox\")\n",
-        "    chrome_options.add_argument(\"--disable-dev-shm-usage\")\n",
-        "    chrome_options.add_argument(\"--blink-settings=imagesEnabled=false\")\n",
-        "    chrome_options.add_argument(\"user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36\")\n",
-        "    driver = webdriver.Chrome(options=chrome_options)\n",
-        "    driver.set_page_load_timeout(30)\n",
-        "    return driver\n",
-        "\n",
-        "def parse_date(date_str):\n",
-        "    \"\"\"Convierte fechas al formato '1 de febrero de 2020'\"\"\"\n",
-        "    try:\n",
-        "        months_es = {\n",
-        "            'Jan': 'enero', 'Feb': 'febrero', 'Mar': 'marzo', 'Apr': 'abril',\n",
-        "            'May': 'mayo', 'Jun': 'junio', 'Jul': 'julio', 'Aug': 'agosto',\n",
-        "            'Sep': 'septiembre', 'Oct': 'octubre', 'Nov': 'noviembre', 'Dec': 'diciembre',\n",
-        "            'January': 'enero', 'February': 'febrero', 'March': 'marzo', 'April': 'abril',\n",
-        "            'June': 'junio', 'July': 'julio', 'August': 'agosto', 'September': 'septiembre',\n",
-        "            'October': 'octubre', 'November': 'noviembre', 'December': 'diciembre'\n",
-        "        }\n",
-        "        \n",
-        "        # Intenta parsear desde formato ISO (2020-06-01T01:16:11.578Z)\n",
-        "        if 'T' in date_str:\n",
-        "            dt = datetime.fromisoformat(date_str.replace('Z', '+00:00'))\n",
-        "            day = dt.day\n",
-        "            month = months_es[dt.strftime('%B')]\n",
-        "            year = dt.year\n",
-        "            return f\"{day} de {month} de {year}\"\n",
-        "        \n",
-        "        # Intenta parsear desde formato '1 Jun 2020'\n",
-        "        parts = re.split(r'[\\s,]+', date_str.strip())\n",
-        "        if len(parts) >= 3:\n",
-        "            day = parts[0]\n",
-        "            month_abbr = parts[1]\n",
-        "            month = months_es.get(month_abbr, month_abbr)\n",
-        "            year = parts[2]\n",
-        "            return f\"{day} de {month} de {year}\"\n",
-        "            \n",
-        "        return date_str\n",
-        "    except Exception as e:\n",
-        "        print(f\"Error parseando fecha '{date_str}': {str(e)}\")\n",
-        "        return date_str\n",
-        "\n",
-        "def extract_with_selenium(driver, url):\n",
-        "    \"\"\"Extrae datos usando Selenium para contenido dinámico\"\"\"\n",
-        "    try:\n",
-        "        driver.get(url)\n",
-        "        \n",
-        "        # Espera inteligente con timeout extendido\n",
-        "        WebDriverWait(driver, 15).until(\n",
-        "            EC.or_(\n",
-        "                EC.presence_of_element_located((By.CSS_SELECTOR, \".Article-Title\")),\n",
-        "                EC.presence_of_element_located((By.CSS_SELECTOR, \".font--secondary\"))\n",
-        "            )\n",
-        "        )\n",
-        "\n",
-        "        # Extracción optimizada con JavaScript\n",
-        "        article_data = driver.execute_script(\"\"\"\n",
-        "            const getText = (selector) => {\n",
-        "                const el = document.querySelector(selector);\n",
-        "                return el ? el.innerText.trim() : '';\n",
-        "            };\n",
-        "            \n",
-        "            const getContent = () => {\n",
-        "                const contentEl = document.querySelector('.font--secondary') || \n",
-        "                                 document.querySelector('article');\n",
-        "                if (!contentEl) return '';\n",
-        "                \n",
-        "                return Array.from(contentEl.querySelectorAll('.font--secondary'))\n",
-        "                    .map(.font--secondary => .font--secondary.innerText.trim())\n",
-        "                    .filter(t => t.length > 0)\n",
-        "                    .join('\\\\n\\\\n');\n",
-        "            };\n",
-        "            \n",
-        "            return {\n",
-        "                title: getText('.Article-Title'),\n",
-        "                author: document.querySelector('.Article-Author')?.content || '',\n",
-        "                date: document.querySelector('.Article-Time')?.content || \n",
-        "                      document.querySelector('meta[name=\"article:published_time\"]')?.content ||\n",
-        "                      document.querySelector('time.Article-Time')?.innerText.split('-')[0].trim() || '',\n",
-        "                content: getContent()\n",
-        "            };\n",
-        "        \"\"\")\n",
-        "        \n",
-        "        return {\n",
-        "            'Autor': article_data.get('author', 'Autor no encontrado'),\n",
-        "            'Fecha': parse_date(article_data.get('date', 'Fecha no encontrada')),\n",
-        "            'Título': article_data.get('title', 'No encontrado'),\n",
-        "            'Contenido': article_data.get('content', 'Contenido no disponible'),\n",
-        "            'Vínculo': url\n",
-        "        }\n",
-        "        \n",
-        "    except Exception as e:\n",
-        "        print(f\"Error con Selenium en {url}: {str(e)}\")\n",
-        "        return None\n",
-        "\n",
-        "def process_urls(urls_file, output_file):\n",
-        "    \"\"\"Procesa múltiples URLs desde archivo\"\"\"\n",
-        "    with open(urls_file, 'r', encoding='utf-8') as f:\n",
-        "        urls = [line.strip() for line in f if line.strip()]\n",
-        "    \n",
-        "    driver = setup_driver()\n",
-        "    results = []\n",
-        "    \n",
-        "    for i, url in enumerate(urls, 1):\n",
-        "        print(f\"Procesando ({i}/{len(urls)}): {url}\")\n",
-        "        \n",
-        "        try:\n",
-        "            # Primero intenta con requests (más rápido)\n",
-        "            headers = {\n",
-        "                'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36'\n",
-        "            }\n",
-        "            response = requests.get(url, headers=headers, timeout=15)\n",
-        "            soup = BeautifulSoup(response.text, 'html.parser')\n",
-        "            \n",
-        "            # Verifica si el contenido está completo\n",
-        "            if not soup.find('div', class_='Article-Content'):\n",
-        "                print(\"Contenido incompleto, usando Selenium...\")\n",
-        "                raise ValueError(\"Contenido requiere JavaScript\")\n",
-        "            \n",
-        "            # Extracción con BeautifulSoup\n",
-        "            title = soup.find('h1', class_='Article-Title')\n",
-        "            author = soup.find('meta', {'name': 'cXenseParse:author'})\n",
-        "            date = (soup.find('meta', {'name': 'article:modified_time'}) or \n",
-        "                   soup.find('meta', {'name': 'article:published_time'}) or\n",
-        "                   soup.find('time', class_='Article-Time'))\n",
-        "            \n",
-        "            content_div = soup.find('div', class_='Article-Content')\n",
-        "            paragraphs = []\n",
-        "            if content_div:\n",
-        "                for p in content_div.find_all('p'):\n",
-        "                    paragraphs.append(p.get_text().strip())\n",
-        "            \n",
-        "            date_value = ''\n",
-        "            if date:\n",
-        "                if date.get('content'):\n",
-        "                    date_value = date['content']\n",
-        "                else:\n",
-        "                    date_value = date.get_text().split('-')[0].strip()\n",
-        "            \n",
-        "            result = {\n",
-        "                'Autor': author['content'] if author else 'Autor no encontrado',\n",
-        "                'Fecha': parse_date(date_value) if date_value else 'Fecha no encontrada',\n",
-        "                'Título': title.get_text().strip() if title else 'No encontrado',\n",
-        "                'Contenido': '\\n\\n'.join(paragraphs) if paragraphs else 'Contenido no disponible',\n",
-        "                'Vínculo': url\n",
-        "            }\n",
-        "            \n",
-        "        except Exception as e:\n",
-        "            print(f\"Falló método rápido, intentando con Selenium: {str(e)}\")\n",
-        "            result = extract_with_selenium(driver, url)\n",
-        "            if not result:\n",
-        "                result = {\n",
-        "                    'Autor': 'Error al extraer autor',\n",
-        "                    'Fecha': 'Error al extraer fecha',\n",
-        "                    'Título': 'Error al extraer título',\n",
-        "                    'Contenido': 'Error al extraer contenido',\n",
-        "                    'Vínculo': url\n",
-        "                }\n",
-        "        \n",
-        "        results.append(result)\n",
-        "        time.sleep(2)  # Intervalo entre requests\n",
-        "    \n",
-        "    driver.quit()\n",
-        "    \n",
-        "    # Guardar resultados en el orden solicitado\n",
-        "    df = pd.DataFrame(results)[['Autor', 'Fecha', 'Título', 'Contenido', 'Vínculo']]\n",
-        "    \n",
-        "    # Asegurar formato correcto en Excel\n",
-        "    writer = pd.ExcelWriter(output_file, engine='xlsxwriter')\n",
-        "    df.to_excel(writer, index=False, sheet_name='Artículos')\n",
-        "    \n",
-        "    # Ajustar el ancho de las columnas\n",
-        "    worksheet = writer.sheets['Artículos']\n",
-        "    worksheet.set_column('A:A', 30)  # Autor\n",
-        "    worksheet.set_column('B:B', 25)  # Fecha\n",
-        "    worksheet.set_column('C:C', 50)  # Título\n",
-        "    worksheet.set_column('D:D', 100) # Contenido\n",
-        "    worksheet.set_column('E:E', 60)  # Vínculo\n",
-        "    \n",
-        "    writer.close()\n",
-        "    print(f\"\\nProceso completado. Resultados guardados en {output_file}\")\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "    process_urls('urls.txt', 'resultados_articulos.xlsx')"
+        " \n",
+        "url = \"https://www.elespectador.com/opinion/columnistas/aura-lucia-mera/parabola-del-salmon-column/\"\n",
+        " \n",
+        "headers = {\n",
+        "    \"User-Agent\": \"Mozilla/5.0\"\n",
+        "}\n",
+        " \n",
+        "response = requests.get(url, headers=headers)\n",
+        " \n",
+        "if response.status_code == 200:\n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        " \n",
+        "    cuerpo = soup.find('div', class_='Article-Content')\n",
+        "   \n",
+        "    if cuerpo:\n",
+        "        for basura in cuerpo.find_all(['audio', 'figure', 'figcaption', 'strong', 'div']):\n",
+        "            basura.decompose()\n",
+        " \n",
+        "        parrafos = cuerpo.find_all('p')\n",
+        "        texto = \"\\n\\n\".join(p.get_text(separator=\" \", strip=True) for p in parrafos)\n",
+        " \n",
+        "        texto = re.sub(r'\\s+([,.;:])', r'\\1', texto)\n",
+        "        texto = re.sub(r\"([a-záéíóúñ])([A-ZÁÉÍÓÚÑ])\", r\"\\1 \\2\", texto)\n",
+        " \n",
+        "        print(texto)\n",
+        "    else:\n",
+        "        print(\"No se encontró el contenido del artículo.\")\n",
+        "else:\n",
+        "    print(f\"Error al acceder: código {response.status_code}\")\n",
+        " "
       ]
     },
     {
