--- a/Speech and Language Processing Textbook/Logistic Regression/logistic_regression.ipynb
+++ b/Speech and Language Processing Textbook/Logistic Regression/logistic_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 254,
    "id": "b3cf9605",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 255,
    "id": "d287ab17",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
        "9  https://web.archive.org/web/20190818130521/htt...             NaN  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 256,
    "id": "095d7599",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
     "    \"arte\", \"literatura\", \"cine\", \"música\", \"teatro\",\n",
     "    \"patrimonio\", \"tradición\", \"identidad\", \"diversidad\", \"folclore\",\n",
     "    \"creatividad\", \"exposición\", \"festival\", \"crítica\", \"vanguardia\",\n",
-    "    \"heritage\", \"artística\", \"movimiento\", \"cultural\", \"intercultural\", \"película\"\n",
+    "     \"artística\", \"movimiento\", \"cultural\", \"intercultural\", \"película\"\n",
     "]\n",
     "\n",
     "\n",
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 257,
    "id": "e0545ed1",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 258,
    "id": "d47b180c",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 259,
    "id": "43a4be84",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 260,
    "id": "4a668365",
    "metadata": {},
    "outputs": [],
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 261,
    "id": "bef1c86d",
    "metadata": {},
    "outputs": [],
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 262,
    "id": "e59e1ea4",
    "metadata": {},
    "outputs": [],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 263,
    "id": "f4be7396",
    "metadata": {},
    "outputs": [],
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 264,
    "id": "9fa7901e",
    "metadata": {},
    "outputs": [
@@ -441,7 +441,7 @@
        "{'Medio Ambiente': 0, 'Cultura': 1, 'Política': 2}"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 265,
    "id": "03227aaf",
    "metadata": {},
    "outputs": [],
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 266,
    "id": "cb1b7926",
    "metadata": {},
    "outputs": [],
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 267,
    "id": "3c139143",
    "metadata": {},
    "outputs": [],
@@ -482,19 +482,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 268,
    "id": "604c8a59",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.13544759,  0.59647344, -0.16476516],\n",
-       "       [-0.37278455, -0.29109842,  0.39583083],\n",
-       "       [ 0.50823214, -0.30537501, -0.23106566]])"
+       "array([[-0.14724569,  0.61232501, -0.15312483],\n",
+       "       [-0.37832112, -0.27987466,  0.40991071],\n",
+       "       [ 0.50150175, -0.30623072, -0.21926489]])"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 269,
    "id": "57d70960",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
        "'Cultura'"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
