Cambio de carpeta

--- a/Speech and Language Processing Textbook/Logistic Regression/logistic_regression.ipynb
+++ b/Speech and Language Processing Textbook/Logistic Regression/logistic_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 387,
    "id": "b3cf9605",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 388,
    "id": "d287ab17",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
        "9  https://web.archive.org/web/20190818130521/htt...             NaN  "
       ]
      },
-     "execution_count": 255,
+     "execution_count": 388,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 389,
    "id": "095d7599",
    "metadata": {},
    "outputs": [],
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 390,
    "id": "e0545ed1",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": null,
+   "id": "4e134843",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 391,
    "id": "d47b180c",
    "metadata": {},
    "outputs": [],
@@ -319,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 392,
    "id": "43a4be84",
    "metadata": {},
    "outputs": [],
@@ -341,12 +349,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 393,
    "id": "4a668365",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradiente_estocastico_descendente(X_train, y_train, learning_rate=0.01, iterations=1000, softmax_func=softmax_simple):\n",
+    "def gradiente_estocastico_descendente(X_train, y_train, learning_rate=0.01, iterations=10, softmax_func=softmax_simple):\n",
     "\n",
     "    scaler = StandardScaler()\n",
     "    X_scaled = scaler.fit_transform(X_train)\n",
@@ -363,7 +371,7 @@
     "        # Mezclar los datos en cada época\n",
     "        indices = np.arange(n_samples)\n",
     "        np.random.shuffle(indices)\n",
-    "        \n",
+    "        g_W = []\n",
     "        for i in indices:\n",
     "            # Seleccionar un ejemplo aleatorio\n",
     "            x = X_scaled[i:i+1]  # Mantener como matriz 2D (1, n_features)\n",
@@ -384,16 +392,29 @@
     "            grad_weights = np.dot(error.T, x)\n",
     "            grad_bias = error.sum(axis=0)\n",
     "            \n",
+    "                                    \n",
     "            # Actualizar pesos y bias\n",
     "            weights -= learning_rate * grad_weights\n",
     "            bias -= learning_rate * grad_bias\n",
+    "\n",
+    "        print(f\"Iteración {iter+1}\")\n",
+    "        print(np.linalg.norm(grad_weights))\n",
+    "        g_W.append(np.linalg.norm(grad_weights))\n",
     "            \n",
-    "    return weights, bias, scaler"
+    "    return weights, bias, scaler, g_W"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": null,
+   "id": "aa8b4357",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 394,
    "id": "bef1c86d",
    "metadata": {},
    "outputs": [],
@@ -401,12 +422,12 @@
     "def predecir(X, weights, bias, scaler):\n",
     "    X_scaled = scaler.transform(X)\n",
     "    z = np.dot(X_scaled, weights.T) + bias\n",
-    "    return np.argmax(softmax(z), axis=1)"
+    "    return np.argmax(softmax_simple(z), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 395,
    "id": "e59e1ea4",
    "metadata": {},
    "outputs": [],
@@ -419,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 396,
    "id": "f4be7396",
    "metadata": {},
    "outputs": [],
@@ -431,17 +452,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 397,
    "id": "9fa7901e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Medio Ambiente': 0, 'Cultura': 1, 'Política': 2}"
+       "{'Medio Ambiente': 0, 'Política': 1, 'Cultura': 2}"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 397,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +473,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 398,
+   "id": "1a2d7e4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 0, 0, 0, 2, 2, 2])"
+      ]
+     },
+     "execution_count": 398,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 399,
    "id": "03227aaf",
    "metadata": {},
    "outputs": [],
@@ -462,7 +504,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 400,
+   "id": "7ce08611",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 0, 0],\n",
+       "       [8, 0, 0],\n",
+       "       [7, 0, 0],\n",
+       "       [2, 3, 0],\n",
+       "       [2, 5, 1],\n",
+       "       [1, 6, 0],\n",
+       "       [1, 0, 3],\n",
+       "       [0, 1, 5],\n",
+       "       [0, 0, 0]])"
+      ]
+     },
+     "execution_count": 400,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 401,
    "id": "cb1b7926",
    "metadata": {},
    "outputs": [],
@@ -472,40 +543,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 402,
    "id": "3c139143",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteración 1\n",
+      "1.097977443749785\n",
+      "Iteración 2\n",
+      "0.6887088965339859\n",
+      "Iteración 3\n",
+      "1.5039045231197192\n",
+      "Iteración 4\n",
+      "1.4281541106629967\n",
+      "Iteración 5\n",
+      "0.7239838522929607\n",
+      "Iteración 6\n",
+      "1.276050192661326\n",
+      "Iteración 7\n",
+      "0.6362147916651009\n",
+      "Iteración 8\n",
+      "0.9496335349946741\n",
+      "Iteración 9\n",
+      "1.2632364668970637\n",
+      "Iteración 10\n",
+      "0.679892176778557\n",
+      "Iteración 11\n",
+      "0.8594475860734607\n",
+      "Iteración 12\n",
+      "0.9173054836231026\n",
+      "Iteración 13\n",
+      "0.5832722248047538\n",
+      "Iteración 14\n",
+      "0.6515382116328079\n",
+      "Iteración 15\n",
+      "0.7590628544990441\n",
+      "Iteración 16\n",
+      "0.7276878368546946\n",
+      "Iteración 17\n",
+      "0.6983327076777806\n",
+      "Iteración 18\n",
+      "0.6279340239730966\n",
+      "Iteración 19\n",
+      "0.735126084163867\n",
+      "Iteración 20\n",
+      "0.6572554076516773\n",
+      "Iteración 21\n",
+      "0.5707387488981097\n",
+      "Iteración 22\n",
+      "0.5437476223521875\n",
+      "Iteración 23\n",
+      "0.515996736478643\n",
+      "Iteración 24\n",
+      "0.5103655699044304\n",
+      "Iteración 25\n",
+      "0.5163413981711618\n",
+      "Iteración 26\n",
+      "0.5502586504699571\n",
+      "Iteración 27\n",
+      "0.43145008120379824\n",
+      "Iteración 28\n",
+      "0.5832835471338564\n",
+      "Iteración 29\n",
+      "0.4039924771279325\n",
+      "Iteración 30\n",
+      "0.43771975751082565\n",
+      "Iteración 31\n",
+      "0.5726904942929238\n",
+      "Iteración 32\n",
+      "0.48824543549782473\n",
+      "Iteración 33\n",
+      "0.3357550846854731\n",
+      "Iteración 34\n",
+      "0.4497146045736361\n",
+      "Iteración 35\n",
+      "0.5599432597072427\n",
+      "Iteración 36\n",
+      "0.5569554501751626\n",
+      "Iteración 37\n",
+      "0.35571139510314403\n",
+      "Iteración 38\n",
+      "0.34602209482448015\n",
+      "Iteración 39\n",
+      "0.5485170383088671\n",
+      "Iteración 40\n",
+      "0.43891612014734205\n",
+      "Iteración 41\n",
+      "0.7765370788534546\n",
+      "Iteración 42\n",
+      "0.43180593870924916\n",
+      "Iteración 43\n",
+      "0.4283619946780338\n",
+      "Iteración 44\n",
+      "0.28672092783694497\n",
+      "Iteración 45\n",
+      "0.3525871032423233\n",
+      "Iteración 46\n",
+      "0.21146451080888568\n",
+      "Iteración 47\n",
+      "0.36285153907593204\n",
+      "Iteración 48\n",
+      "0.2563336955689392\n",
+      "Iteración 49\n",
+      "0.5244711922038218\n",
+      "Iteración 50\n",
+      "0.18681163127394623\n",
+      "Iteración 51\n",
+      "0.31310565739554735\n",
+      "Iteración 52\n",
+      "0.19231746375137315\n",
+      "Iteración 53\n",
+      "0.32801208368761126\n",
+      "Iteración 54\n",
+      "0.3227829506348216\n",
+      "Iteración 55\n",
+      "0.31772336055263467\n",
+      "Iteración 56\n",
+      "0.3128106648510825\n",
+      "Iteración 57\n",
+      "0.2042954185340494\n",
+      "Iteración 58\n",
+      "0.3844343089945671\n",
+      "Iteración 59\n",
+      "0.14484025335981995\n",
+      "Iteración 60\n",
+      "0.5026718055337737\n",
+      "Iteración 61\n",
+      "0.6784587558094145\n",
+      "Iteración 62\n",
+      "0.6742287775952072\n",
+      "Iteración 63\n",
+      "0.3722700019655559\n",
+      "Iteración 64\n",
+      "0.12731566973301503\n",
+      "Iteración 65\n",
+      "0.13979272811329477\n",
+      "Iteración 66\n",
+      "0.16741752201123766\n",
+      "Iteración 67\n",
+      "0.26674685345122323\n",
+      "Iteración 68\n",
+      "0.6502592831971172\n",
+      "Iteración 69\n",
+      "0.3589165977147574\n",
+      "Iteración 70\n",
+      "0.25634598711893647\n",
+      "Iteración 71\n",
+      "0.22228206640425413\n",
+      "Iteración 72\n",
+      "0.12001107555835161\n",
+      "Iteración 73\n",
+      "0.11752708337254822\n",
+      "Iteración 74\n",
+      "0.34869225928506004\n",
+      "Iteración 75\n",
+      "0.09835054272714738\n",
+      "Iteración 76\n",
+      "0.23770781553412934\n",
+      "Iteración 77\n",
+      "0.6178749372130942\n",
+      "Iteración 78\n",
+      "0.34100266596401624\n",
+      "Iteración 79\n",
+      "0.09020806907674427\n",
+      "Iteración 80\n",
+      "0.47058026648961926\n",
+      "Iteración 81\n",
+      "0.10018782253204032\n",
+      "Iteración 82\n",
+      "0.22142920436025798\n",
+      "Iteración 83\n",
+      "0.18648941252307924\n",
+      "Iteración 84\n",
+      "0.3302511177329533\n",
+      "Iteración 85\n",
+      "0.13254424900167658\n",
+      "Iteración 86\n",
+      "0.09120209394099998\n",
+      "Iteración 87\n",
+      "0.32518018112065006\n",
+      "Iteración 88\n",
+      "0.4594785952813969\n",
+      "Iteración 89\n",
+      "0.07375770251452707\n",
+      "Iteración 90\n",
+      "0.07236343677130068\n",
+      "Iteración 91\n",
+      "0.167498468476055\n",
+      "Iteración 92\n",
+      "0.45412854701662053\n",
+      "Iteración 93\n",
+      "0.06840989199236024\n",
+      "Iteración 94\n",
+      "0.5659575476580565\n",
+      "Iteración 95\n",
+      "0.1926461282546656\n",
+      "Iteración 96\n",
+      "0.09887423988652341\n",
+      "Iteración 97\n",
+      "0.11050467219689546\n",
+      "Iteración 98\n",
+      "0.15331450964514876\n",
+      "Iteración 99\n",
+      "0.10738687392320923\n",
+      "Iteración 100\n",
+      "0.10586756814708216\n"
+     ]
+    }
+   ],
    "source": [
-    "weights, bias, scaler = gradiente_estocastico_descendente(X_train, y_train, learning_rate=0.1, iterations=2, softmax_func=softmax)"
+    "weights, bias, scaler, g_b = gradiente_estocastico_descendente(X_train, y_train, learning_rate=0.01, iterations=100, softmax_func=softmax)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 403,
    "id": "604c8a59",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.14724569,  0.61232501, -0.15312483],\n",
-       "       [-0.37832112, -0.27987466,  0.40991071],\n",
-       "       [ 0.50150175, -0.30623072, -0.21926489]])"
+       "array([ 0.02749125, -0.03280917,  0.00531792])"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 403,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "weights"
+    "bias"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 404,
    "id": "57d70960",
    "metadata": {},
    "outputs": [
@@ -515,7 +791,7 @@
        "'Cultura'"
       ]
      },
-     "execution_count": 269,
+     "execution_count": 404,
      "metadata": {},
      "output_type": "execute_result"
     }
