--- a/Códigos/topic_modeling.ipynb
+++ b/Códigos/topic_modeling.ipynb
@@ -11,6 +11,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "886aa7b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola, mundo!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hola, mundo!\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6f63b7e6",
    "metadata": {},
@@ -74,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 73,
    "id": "78138bb7",
    "metadata": {},
    "outputs": [
@@ -193,7 +211,7 @@
        "4  https://web.archive.org/web/20180102104221/htt...     NaN  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +221,7 @@
     "if dataframes:\n",
     "    corpus_completo = pd.concat(dataframes, ignore_index=True)\n",
     "\n",
-    "corpus_completo.head()"
+    "corpus_completo.head()                                                                                                                              "
    ]
   },
   {
@@ -1811,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 75,
    "id": "29d01b09",
    "metadata": {},
    "outputs": [],
@@ -1878,7 +1896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 76,
    "id": "a3e978b8",
    "metadata": {},
    "outputs": [
@@ -1888,7 +1906,7 @@
        "True"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
